--- a/Web.config
+++ b/Web.config
@@ -12,8 +12,8 @@
     <!-- update these with your Microsoft App Id and your Microsoft App Password-->
     <add key="MicrosoftAppId" value="" />
     <add key="MicrosoftAppPassword" value="" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
+    <add key="LuisAppId" value="2cb9150f-2fb3-4b12-a6a7-7fbf970faf11" />
+    <add key="LuisAPIKey" value="b539ded61efe4231889c3688d68dbb35" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
