--- a/Web.config
+++ b/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <appSettings>
     <!-- update these with your Microsoft App Id and your Microsoft App Password-->
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
+    <add key="MicrosoftAppId" value="d50e9896-fae9-4ebb-bc13-7c0ee2a78254" />
+    <add key="MicrosoftAppPassword" value=")KGTmkq:2A@#PEj^" />
     <add key="LuisAppId" value="2cb9150f-2fb3-4b12-a6a7-7fbf970faf11" />
     <add key="LuisAPIKey" value="b539ded61efe4231889c3688d68dbb35" />
   </appSettings>
